--- a/ui/Main_Window.ui
+++ b/ui/Main_Window.ui
@@ -14,13 +14,13 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QToolButton" name="btn1">
+   <widget class="QToolButton" name="brn1">
     <property name="geometry">
      <rect>
       <x>50</x>
       <y>60</y>
       <width>101</width>
-      <height>31</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -30,10 +30,10 @@
    <widget class="QToolButton" name="btn2">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>190</x>
       <y>60</y>
-      <width>91</width>
-      <height>31</height>
+      <width>101</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -43,14 +43,27 @@
    <widget class="QToolButton" name="btn3">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>330</x>
       <y>60</y>
       <width>101</width>
-      <height>31</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>執行</string>
+     <string>開始自動掛網</string>
+    </property>
+   </widget>
+   <widget class="QToolButton" name="btn4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>550</y>
+      <width>22</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
     </property>
    </widget>
   </widget>
